# realtime-edge-detector

./: README.md  build.gradle.kts  index.html  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/rnd/edgedetector/: FrameAnalyzer.kt  MainActivity.kt  NativeProcessor.kt  YourFrameAnalyzer.kt
app/src/main/res/layout/: activity_main.xml
gl/: EdgeRenderer.kt  ShaderUtil.kt
jni/: CMakeLists.txt  NativeProcessor.cpp
web/: app.ts  index.html  package-lock.json  package.json  tsconfig.json
